# elm-lsp-rust

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  COMPARISON.md  Cargo.toml  README.md  benchmark.py  debug_compare.py  feature_compare.py  run_tests.sh  test_lsp.py  test_lsp.sh  test_refs.py  test_rename.py  test_workspace.py
.claude-plugin/: plugin.json
mcp-wrapper/: index.mjs  package-lock.json  package.json  test_client.mjs  test_fixture_only.mjs  test_full.mjs  test_meetdown.mjs  test_move.mjs  test_remove_variant.mjs
scripts/: install-hooks.sh  setup.sh
skills/elm-refactoring/: SKILL.md
src/: binder.rs  diagnostics.rs  disjoint_set.rs  document.rs  inference.rs  lib.rs  main.rs  parser.rs  server.rs  type_checker.rs  types.rs  workspace.rs
src/workspace/: erd.rs  field_operations.rs  file_operations.rs  mod.rs  move_function.rs  types.rs  variant_operations.rs
tests/: COVERAGE.md  bugs_found.md  edge_case_tests.mjs  package-lock.json  package.json  run_all_tests.mjs  run_tests.mjs  test_branch_codes_intricate.mjs  test_branch_codes_simple.mjs  test_chained_operations.mjs  test_field_rename_manual.mjs  test_meetdown_comprehensive.mjs  test_rename_variant_manual.mjs
tests/fixture/src/: FieldRename.elm  Main.elm  TestRemoveVariant.elm  Types.elm  Utils.elm
tests/meetdown/: package-lock.json
tests/meetdown/.claude/: settings.local.json
tests/meetdown/meetdown/src/: Frontend.elm  TimeExtra.elm  Types.elm
tests/meetdown/src/: AppRoute.elm  DomId.elm  Identifier.elm  UserName.elm  WebLink.elm
tests/meetdown/src/Domain/: Event.elm
(+3 files in other folders)
