[package]
name = "elm_lsp"
version = "0.1.0"
edition = "2021"
description = "A fast Elm Language Server written in Rust"
license = "MIT"

[dependencies]
# LSP protocol
tower-lsp = "0.20"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Elm parsing
tree-sitter = "0.25"
tree-sitter-elm = "5.9"

# Concurrent data structures
dashmap = "5"

# Path handling
walkdir = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

[build-dependencies]
cc = "1"
